--- a/config/yalf.ini
+++ b/config/yalf.ini
@@ -16,9 +16,9 @@ XHPROF=0
 XHPROF_PATH="modules/foreign/xhprof"
 
 ; Your application logo, name and site URL
-YALF_LOGO="https://piclod.com/i/1700744723/oflow.png"
-YALF_URL="http://yalf.nightfly.biz"
-YALF_APP="Dummy application"
+YALF_LOGO="skins/oflow.png"
+YALF_URL="https://github.com/nightflyza/OphanimFlow"
+YALF_APP="OphanimFlow"
 YALF_TITLE="OphanimFlow"
 
 ; Disabled modules list. Separator - comma.
