new dashboard template

--- a/config/yalf.ini
+++ b/config/yalf.ini
@@ -1,7 +1,7 @@
 ; Main module name from modules/general/
 INDEX_MODULE="index"
 ; Template name to preload from skins/ like "paper", "void", "miniml", "rpg", etc...
-YALF_SKIN="paper"
+YALF_SKIN="oph"
 ; Default application language. Loaded from languages directory.
 YALF_LANG="english"
 ; Allow online language switching by remote clients? 
@@ -47,7 +47,7 @@ LAYER_CACHE="ubconfig,ubcache"
 ;LAYER_WHOIS="whois"
 ;LAYER_SNMP="snmphelper,ubconfig"
 ;LAYER_ZEN="zenflow"
-;LAYER_GRAVATAR="ubconfig,gravatar"
+LAYER_GRAVATAR="ubconfig,gravatar"
 
 ; Renderer layers
 LAYER_WEBRENDER="webrender,workicons,astral"
