netflow collector config and pretag map generation done

--- a/config/alter.ini
+++ b/config/alter.ini
@@ -26,3 +26,7 @@ GRAVATAR_CACHETIME=1
 ;Enables SNMP walk/set debugging mode globally
 SNMP_DEBUG_MODE=0
 TRAFFSIZE=float
+
+SUDO_PATH="/usr/local/bin/sudo"
+COLLECTOR_PORT=42112
+COLLECTOR_PATH="/usr/local/sbin/nfacctd"
