basic management done

--- a/config/alter.ini
+++ b/config/alter.ini
@@ -27,6 +27,8 @@ GRAVATAR_CACHETIME=1
 SNMP_DEBUG_MODE=0
 TRAFFSIZE=float
 
-SUDO_PATH="/usr/local/bin/sudo"
 COLLECTOR_PORT=42112
+SAMPLING_RATE=100
+SUDO_PATH="/usr/local/bin/sudo"
+KILLALL_PATH="/usr/bin/killall"
 COLLECTOR_PATH="/usr/local/sbin/nfacctd"
