--- a/config/alter.ini
+++ b/config/alter.ini
@@ -32,3 +32,4 @@ SAMPLING_RATE=100
 SUDO_PATH="/usr/local/bin/sudo"
 KILLALL_PATH="/usr/bin/killall"
 COLLECTOR_PATH="/usr/local/sbin/nfacctd"
+RM_PATH="/bin/rm"
