--- a/config/alter.ini
+++ b/config/alter.ini
@@ -25,10 +25,16 @@ GRAVATAR_DEFAULT=monsterid
 GRAVATAR_CACHETIME=1
 ;Enables SNMP walk/set debugging mode globally
 SNMP_DEBUG_MODE=0
+;Default traffic amounts display option
 TRAFFSIZE=float
-
+;host IP that allowed to call flows processing callbacks
+SERVICES_HOST="127.0.0.1"
+;hosts IPs that allowed to use API endpoints like graph, gettraff etc. Comma separated. Allowed all if empty.
+ENDPOINTS_HOSTS=""
+;NetFlow colloector default options
 COLLECTOR_PORT=42112
 SAMPLING_RATE=100
+;some system binary paths here
 SUDO_PATH="/usr/local/bin/sudo"
 KILLALL_PATH="/usr/bin/killall"
 COLLECTOR_PATH="/usr/local/sbin/nfacctd"
