some performance issues fixed

--- a/config/alter.ini
+++ b/config/alter.ini
@@ -34,8 +34,15 @@ ENDPOINTS_HOSTS=""
 ;NetFlow colloector default options
 COLLECTOR_PORT=42112
 SAMPLING_RATE=100
+;limit raw data read depth?
+SPEED_LOAD=1
+;Disabling this also boosts data processing speed
+VALIDATE_COUNTERS=0
+;Charts debugging flag
+CHARTS_DEBUG=0
 ;some system binary paths here
 SUDO_PATH="/usr/local/bin/sudo"
 KILLALL_PATH="/usr/bin/killall"
 COLLECTOR_PATH="/usr/local/sbin/nfacctd"
 RM_PATH="/bin/rm"
+TAIL_PATH="/usr/bin/tail"
