setup updated, creepy dev things removed

--- a/config/mysql.ini
+++ b/config/mysql.ini
@@ -1,9 +1,9 @@
 ;database host
-server = "hamster"
+server = "localhost"
 ;database port
 port = "3306"
 ;user login
-username = "oph"
+username = "mylogin"
 ;user password
 password = "newpassword"
 ;database name to use
