--- a/config/alter.ini
+++ b/config/alter.ini
@@ -40,6 +40,8 @@ SPEED_LOAD=1
 VALIDATE_COUNTERS=0
 ;Charts debugging flag
 CHARTS_DEBUG=0
+;Render network description on charts if its available
+CHARTS_NETDESC=0
 ;some system binary paths here
 SUDO_PATH="/usr/local/bin/sudo"
 KILLALL_PATH="/usr/bin/killall"
