--- a/config/alter.ini
+++ b/config/alter.ini
@@ -39,9 +39,11 @@ SPEED_LOAD=1
 ;Disabling this also boosts data processing speed
 VALIDATE_COUNTERS=0
 ;Charts debugging flag
-CHARTS_DEBUG=0
+CHARTS_DEBUG=1
 ;Render network description on charts/reports if its available
 CHARTS_NETDESC=0
+;more detailed and accurate charts instead of maximum performance
+CHARTS_ACCURATE=0
 ;some system binary paths here
 SUDO_PATH="/usr/local/bin/sudo"
 KILLALL_PATH="/usr/bin/killall"
