--- a/config/alter.ini
+++ b/config/alter.ini
@@ -44,6 +44,8 @@ CHARTS_DEBUG=0
 CHARTS_NETDESC=0
 ;more detailed and accurate charts instead of maximum performance
 CHARTS_ACCURATE=1
+;Consider VLANs for v9/IPFIX flows.
+CONSIDER_VLANS=0
 ;some system binary paths here
 SUDO_PATH="/usr/local/bin/sudo"
 KILLALL_PATH="/usr/bin/killall"
