rotator under development

--- a/config/alter.ini
+++ b/config/alter.ini
@@ -52,3 +52,5 @@ KILLALL_PATH="/usr/bin/killall"
 COLLECTOR_PATH="/usr/local/sbin/nfacctd"
 RM_PATH="/bin/rm"
 TAIL_PATH="/usr/bin/tail"
+;Reserved storage free space percent
+STORAGE_RESERVED_SPACE=50
