rotator ready for testing

--- a/config/alter.ini
+++ b/config/alter.ini
@@ -53,4 +53,6 @@ COLLECTOR_PATH="/usr/local/sbin/nfacctd"
 RM_PATH="/bin/rm"
 TAIL_PATH="/usr/bin/tail"
 ;Reserved storage free space percent
-STORAGE_RESERVED_SPACE=50
+STORAGE_RESERVED_SPACE=10
+;write data rotator debug log into exports/rotator.log?
+ROTATOR_DEBUG=0
