UBILLING_URL and UBILLING_API_KEY options implemented

--- a/config/alter.ini
+++ b/config/alter.ini
@@ -56,3 +56,7 @@ TAIL_PATH="/usr/bin/tail"
 STORAGE_RESERVED_SPACE=10
 ;write data rotator debug log into exports/rotator.log?
 ROTATOR_DEBUG=0
+;sets full URL of Ubilling >=1.5.2 for integration. (USERBYIP_ENABLED option is reqired).
+UBILLING_URL="http://localhost/dev/ubilling/"
+;sets Ubilling API key aka serial for integration
+UBILLING_API_KEY=""
