--- a/config/yalf.ini
+++ b/config/yalf.ini
@@ -27,6 +27,15 @@ YALF_DISABLED_MODULES=""
 ; Emulate RCMS users auth and rights system?
 YALF_AUTH_ENABLED=1
 
+; Enables "always stay logged in" as default behaviour.
+YALF_AUTH_KEEP_DEFAULT=0
+
+; Enables "Stay logged in" checkbox on login form
+YALF_AUTH_KEEP_CB=1
+
+; Disables redirect to index module on success login
+YALF_AUTH_NOREDIR=0
+
 ; Modules which not require any authorization (public modules)
 YALF_NO_AUTH_MODULES="aggrtraff,aggrgdata,graph,gettraff,rotator"
 
