CHARTS_PREALLOC_TIMELINE option implemented

--- a/config/alter.ini
+++ b/config/alter.ini
@@ -39,7 +39,7 @@ SPEED_LOAD=1
 ;Disabling this also boosts data processing speed
 VALIDATE_COUNTERS=0
 ;Charts debugging flag
-CHARTS_DEBUG=0
+CHARTS_DEBUG=1
 ;Render network description on charts/reports if its available
 CHARTS_NETDESC=0
 ;more detailed and accurate charts instead of maximum performance
@@ -60,3 +60,5 @@ ROTATOR_DEBUG=0
 UBILLING_URL="http://localhost/dev/ubilling/"
 ;sets Ubilling API key aka serial for integration
 UBILLING_API_KEY=""
+;Enables daily timeline allocation for charts.
+CHARTS_PREALLOC_TIMELINE=0
