sFlow collector ready for testing

--- a/config/alter.ini
+++ b/config/alter.ini
@@ -34,6 +34,8 @@ ENDPOINTS_HOSTS=""
 ;NetFlow colloector default options
 COLLECTOR_PORT=42112
 SAMPLING_RATE=100
+;sFlow collector default options
+SFLOW_PORT=6343
 ;limit raw data read depth?
 SPEED_LOAD=1
 ;Disabling this also boosts data processing speed
@@ -50,6 +52,7 @@ CONSIDER_VLANS=0
 SUDO_PATH="/usr/local/bin/sudo"
 KILLALL_PATH="/usr/bin/killall"
 COLLECTOR_PATH="/usr/local/sbin/nfacctd"
+SFLOW_COLLECTOR_PATH="/usr/local/sbin/sfacctd"
 RM_PATH="/bin/rm"
 TAIL_PATH="/usr/bin/tail"
 ;Reserved storage free space percent
