--- a/config/alter.ini
+++ b/config/alter.ini
@@ -31,7 +31,7 @@ TRAFFSIZE=float
 SERVICES_HOST="127.0.0.1"
 ;hosts IPs that allowed to use API endpoints like graph, gettraff etc. Comma separated. Allowed all if empty.
 ENDPOINTS_HOSTS=""
-;NetFlow colloector default options
+;NetFlow collector default options
 COLLECTOR_PORT=42112
 SAMPLING_RATE=100
 ;sFlow collector default options
